# Wallpaper-cli

./: .gitignore  pyproject.toml  requirements.txt
wallpaper_cli/: main.py
