[tool.poetry]
name = "wallpaper-cli"
version = "0.1.0"
description = "a commandline tool to download wallpapers"
authors = ["arjunomray <arjunomray@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
certifi= "2023.7.22"
charset-normalizer="3.2.0"
idna="3.4"
requests="2.31.0"
urllib3="2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
